--- a/assets/css/components/_navigator.css
+++ b/assets/css/components/_navigator.css
@@ -19,13 +19,13 @@
   margin-bottom: 0;
 }
 
-.navigator ul li a{
-  color: white;
-  border: solid 2px white;
-  width:45px;
-  height:45px;
+.navigator ul li a {
+  color: #fff;
+  border: solid 2px #fff;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-  background-color: black;
+  background-color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,21 +37,21 @@
   top: 0;
   width: 2px;
   height: 100%;
-  background-color: white;
+  background-color: #fff;
   z-index: 0;
 }
 
-.navigator ul{
+.navigator ul {
   z-index: 1;
 }
 
-.navigator ul li a:hover, 
+.navigator ul li a:hover,
 .navigator ul li a.active {
   color: var(--primary-color);
-  background-color: white;
+  background-color: #fff;
 }
 
-.navigator .navigator__icon{
+.navigator .navigator__icon {
   position: absolute;
   top: -20px;
 }
