--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: "";
-  background-image: url('../images/spider-man-background.jpg');
+  background-image: url(/assets/images/spider-man-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -46,7 +46,7 @@ body::before {
 }
 
 .s-card {
-  border: 0.5rem solid white;
+  border: 0.5rem solid #fff;
   width: 100%;
   height: 70vh;
   position: absolute;
@@ -82,7 +82,7 @@ body::before {
   transition: 1s ease-in-out;
 }
 
-.s-card__title {
+.s-card__tittle {
   font-size: 2rem;
   text-transform: uppercase;
   text-align: center;
@@ -108,7 +108,7 @@ body::before {
   justify-content: center;
   width: 2.5rem;
   height: 2.5rem;
-  border: 2px solid white;
+  border: 2px solid #fff;
   border-radius: 50%;
   background-color: var(--primary-color);
   text-align: center;
@@ -128,14 +128,14 @@ body::before {
 }
 
 .s-controller__button--active {
-  background-color: white;
+  background-color: #fff;
   color: var(--primary-color);
   border: 0.1875rem solid var(--primary-color);
-  outline: 0.125rem solid white;
+  outline: 0.125rem solid #fff;
 }
 
 .s-controller__line {
-  background-color: white;
+  background-color: #fff;
   width: 50%;
   height: 2px;
   position: absolute;
@@ -150,30 +150,28 @@ body::before {
 
 .s-card--hovered .s-card__image {
   transform: scale(1.4);
-  filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
+  filter: drop-shadow(30px 10px 4px rgba(0,0,0, .5));
 }
 
 body#spider-man-01-hovered::before {
-  background-image: url('../images/pic-sm-bg-01.jpg');
+  background-image: url('/assets/images/pic-sm-bg-01.jpg');
 }
-
 body#spider-man-02-hovered::before {
-  background-image: url('../images/pic-sm-bg-02.jpg');
+  background-image: url('/assets/images/pic-sm-bg-02.jpg');
 }
-
 body#spider-man-03-hovered::before {
-  background-image: url('../images/pic-sm-bg-03.jpg');
+  background-image: url('/assets/images/pic-sm-bg-03.jpg');
 }
 
 body[id^="spider-man-"]::before {
   opacity: 1;
 }
 
-body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
+body[id^="spider-man-"] .s-card:not(.s-card--hovered){
   filter: grayscale(100%);
 }
 
-.s-card--hovered .s-card__title {
+.s-card--hovered .s-card__tittle {
   bottom: 50%;
 }
 
